# PseudoEngine2

./: .gitignore  CMakeLists.txt  Makefile  PsConfig.h.in  README.md  Syntax.md  Syntax.txt  grammar.txt
.github/workflows/: cmake.yml
examples/: Average.pseudo  BinarySearch.pseudo  BubbleSort.pseudo  CopyFile.pseudo  Factorial.pseudo  InsertionSort.pseudo  LinearSearch.pseudo  ROT13.pseudo
src/: line_util.h  main.cpp  pch.h  repl.cpp  run.h  runFile.cpp  tokens.cpp  tokens.h
src/launch/: repl.cpp  runFile.cpp
src/lexer/: lexer.cpp  lexer.h  symbolLexer.cpp  tokens.cpp  tokens.h
src/nodes/: array.cpp  array.h  base.cpp  base.h  cast.cpp  cast.h  file.cpp  function.cpp  ifStatement.cpp  ifStatement.h  io.cpp  io.h  node.h  nodeResult.cpp  nodeResult.h  procedure.cpp  variable.cpp  variable.h
src/nodes/eval/: arithmetic.cpp  arithmetic.h  comparison.cpp  comparison.h  logic.cpp  logic.h  stringcat.cpp  stringcat.h
src/nodes/functions/: function.cpp  function.h  procedure.cpp  procedure.h
src/nodes/io/: file.cpp  file.h  io.cpp  io.h
src/nodes/loop/: control.cpp  control.h  for.cpp  for.h  repeatUntil.cpp  repeatUntil.h  while.cpp  while.h
src/nodes/selection/: case.cpp  case.h  ifStatement.cpp  ifStatement.h
src/nodes/variable/: array.cpp  array.h  composite.cpp  composite.h  enum.cpp  enum.h  pointer.cpp  pointer.h  resolver.cpp  resolver.h  variable.cpp  variable.h
src/parser/: arrayOperationParser.cpp  evalExprParser.cpp  flowControlParser.cpp  functionParser.cpp  ioParser.cpp  loopParser.cpp  parser.cpp  parser.h  procedureParser.cpp  selectionParser.cpp  userType.cpp  variableExprParser.cpp
src/psc/: array.cpp  array.h  block.cpp  block.h  builtinFunctions.cpp  builtinFunctions.h  context.cpp  error.cpp  error.h  file.cpp  file.h  procedure.cpp  procedure.h  types.cpp  types.h  variable.cpp  variable.h
src/psc/builtinFunctions/: char.cpp  date.cpp  functions.h  math.cpp  numeric.cpp  string.cpp
src/psc/scope/: block.cpp  block.h  context.cpp  context.h
src/psc/types/: boolean.cpp  character.cpp  datatypes.h  date.cpp  numeric.cpp  type_definitions.cpp  type_definitions.h  type_names.cpp  types.cpp  types.h  userType.cpp  user_type.cpp
tests/: arrays.pseudo  builtin_functions.pseudo  date.pseudo  enum.pseudo  files.pseudo  function.pseudo  input_int.pseudo  io.pseudo  loop.pseudo  pointer.pseudo  primes.pseudo  procedure.pseudo  random_files.pseudo  selection.pseudo  str.pseudo  types.pseudo
